--- a/fanficfare/changelog.txt
+++ b/fanficfare/changelog.txt
@@ -1,3 +1,46 @@
+Version 2.27.0 - 03 Jul 2018
+- Change adapter_storiesonlinenet to https (and derived finestories) - thanks
+  davidfor.
+- Yet more site change for adapter_webnovelcom
+- Add status states Paused & Cancelled to adapter_fanfiktionde as well as site
+  specific native_status.
+- adapter_webnovelcom: ignore 'ad-walled' chapters--the ad-wall bypass code
+  stopped working, but isn't yet removed.
+- Calibre Plugin: Remove ebook formats before update, overwrite or unnew so
+  that the previouis version ends up in trash instead of just copied over.
+- Add adapter_classes metadata for developer testing.
+- Revert archive.skyehawke.com back https -> http.
+- Remove replace_br_with_p sentinels in desc HTML before giving to Calibre.
+- Fix for author in adapter_lcfanficcom
+- Fix for adapter_inkbunnynet author search.
+- base_efiction: use getProtocol for images too.
+- Change all sites that will work with https to use it all the time.
+- Remove fanfiction.mugglenet.com -- mugglenet.com is there, but no fanfic
+  section anymore.
+- adapter_adultfanfictionorg used urllib2 exceptions without importing it.
+- Updates for site changes for adapter_gravitytalescom.
+- Fix author for adapter_inkbunnynet.
+- Site update fixes for adapter_inkbunnynet, thanks GComyn.
+- Fixes for adapter_webnovelcom for site changes.
+- Add status to webnovelcom (#306) - Thanks, rikkitp
+
+Version 2.26.0 - 30 May 2018
+- base_xenforoforum_adapter: exclude threadmarks URL as chapter URL.
+- adapter_webnovelcom - use_pagecache - mostly for debugging.
+- Fix some metadata collection in adapter_webnovelcom.
+- Change adapter_whoficcom to https.
+- Add rating and sitetags to adapter_webnovelcom.
+- Fix date for adapter_gluttonyfictioncom
+- Remove defunct sites thealphagate.com and harrypotterfanfiction.com
+- Adding website_encodings:ignore feature for adapter_wwwnovelallcom.
+- fix chapter names in www.novelall.com - thanks Rikkitp
+- remove unnecessary br around advert in www.novelall.com - thanks Rikkitp
+- Consolidate URL chapter range code and apply to CLI for #302
+- fixes dateUpdated ang datePublished for lightnovelgate (#303) - thanks
+  Rikkitp
+- https for starslibrarynet, abstract protocol a bit for eFiction Base.
+- Clarify some tooltip text and add 'FFF Frozen URL' feature.
+
 Version 2.25.0 - 29 Apr 2018
 - Fix adapter_hpfanficarchivecom to not take author from banner by mistake.
 - New Site www.novelall.com - Thanks rikkitp!
@@ -15,42 +58,3 @@ Version 2.25.0 - 29 Apr 2018
   colspan,rowspan.
 - Allow domain sufficientvelocity.com for forums.sufficientvelocity.com.
 - Fix for wuxiaworld adapter when image is null (#288) - Thanks rikkitp
-
-Version 2.24.0 - 27 Mar 2018
-- Update translations.
-- Fix for SB/SV threadmarks.rss becoming incomplete list--move
-  extract_threadmarks from QQ back to base.
-- Update adapter for wuxiaworld.com -- thanks cryzed!
-- Remove extra CSS line from default ini files.
-- Fix fix_pseudo_html in configurable.py for plugin edit check.
-- adapter_storiesonline(FineStories.com) fix for missing author link in header
-  tag, from GComyn.
-- Add output_filename to --meta-only (#271), from theit8514
-- Add fix_pseudo_html option for webnovel.com site only, from cryzed
-
-Version 2.23.0 - 28 Feb 2018
-- Update translations.
-- Calculate number of chapters using start-end range when doing updates.
-- Make Get URLs from Page work better with TtH is_adult.
-- Fix rating, warnings, add ships to adapter_harrypotterfanfictioncom
-- Update adapter_efpfanficnet to use https and remove www. by default.
-- *Don't* include fandoms in category for fimfiction.net by default.
-- Handle new VIP chapter types in adapter_webnovelcom (#263) (Thanks cryzed)
-
-Version 2.22.0 - 23 Jan 2018
-(I accidentally skipped v2.21.)
-- Tweak 'Chapter not found...' check for ffnet for changed/new text.
-- Set siteabbrev for adapter_wattpadcom
-- Handle QQ threads w/o threadmarks correctly.
-- Additional CLI python version checking.
-- fimfiction adapter: add new tag types, fix groups (#259), thanks FaceDeer!
-
-Version 2.20.0 - 144 Dec 2017
-- Strip commas from numChapters in CLI for urlchaptercount.
-- Fix to adapter_storiesonlinenet author from GComyn.
-- Apply is_adult&user/pass dialogs to CALIBREONLY update.
-- Adding pre_process_cmd for CLI.
-- Don't 'fix' file:/// to //.
-- Skip #post- URLs in xenforo emails even when on first page.
-- Update translations.
-- Fix author parsing for webnovel.com (#254) from cryzed
